# contexter

./: .env.sample  .gitignore  ANALYSIS.md  CLAUDE.md  PLAN.md  README.md  TESTING_IMPLEMENTATION_SUMMARY.md  pyproject.toml  pytest.ini  requirements.txt  run_rag_integration_tests.py  validate_context7_implementation.py
ai_docs/blueprints/: README.md  dependency-graph.md  implementation-patterns.md  master-blueprint.md  master-rag-implementation-blueprint.md  task-catalog.md  task-dependency-graph.md  task-execution-guide.md
ai_docs/context/: README.md  context-index.md  implementation-summary.md
ai_docs/context/code-patterns/: async-client-patterns.py
ai_docs/context/integration-guides/: qdrant-integration.md
ai_docs/context/technical-specs/: deployment-patterns.md  fastapi-integration.md  monitoring-patterns.md  qdrant-vector-database.md  testing-patterns.md  voyage-ai-embedding.md
ai_docs/deliverables/dev-team-lead/: implementation-plan.md  task-breakdown.md
ai_docs/deliverables/prp-execution-orchestrator/: embedding-service-implementation.md  execution-report.md
ai_docs/deliverables/prp-gotcha-curator/: gotchas-and-mitigations.md
ai_docs/deliverables/prp-success-metrics-designer/: success-metrics.md
ai_docs/deliverables/prp-user-story-architect/: user-stories.md
ai_docs/deliverables/req-requirements-analyst/: contexter-rag-requirements-specification.md
ai_docs/deliverables/system-architect/: architecture-design.md  component-specifications.md
ai_docs/integration/: api-integration-strategies.md  data-flow-design.md  integration-architecture.md
ai_docs/prps/: README.md  rag-api-integration.md  rag-deployment.md  rag-document-ingestion.md  rag-embedding-service.md  rag-monitoring-observability.md  rag-retrieval-engine.md  rag-storage-layer.md  rag-testing-framework.md  rag-vector-db-setup.md
ai_docs/qa/: final-qa-certification.md  prp-readiness-scores.md  quality-assessment-report.md
ai_docs/research/: benchmark-results.md  cost-analysis.md  research-summary.md  risk-assessment.md  technology-evaluation.md
ai_docs/self-critique/: dev-team-lead.md  prp-context-engineer.md  prp-gotcha-curator.md  prp-quality-assurance-specialist.md  prp-research-engineer.md  prp-success-metrics-designer.md  prp-todo-to-prp-orchestrator.md  prp-user-story-architect.md  prp-validation-designer.md  req-requirements-analyst.md  system-architect.md  testing-specialist.md
ai_docs/specifications/: api-specifications.yaml  configuration-specs.md  data-schemas.json  database-schemas.sql  integration-contracts.md  performance-requirements.md  security-specifications.md  service-interfaces.md  specification-index.md
ai_docs/validation/: automated-testing.md  performance-validation.md  quality-gates.md  test-scenarios.md  validation-checklist.md  validation-framework.md
examples/: embedding_service_examples.py
scripts/: benchmark_deduplication.py  run_e2e_tests.py
src/contexter/: __init__.py
src/contexter/cli/: __init__.py  main.py
src/contexter/core/: __init__.py  atomic_file_manager.py  compression_engine.py  concurrent_processor.py  config_manager.py  content_parser.py  deduplication.py  (+9 more)
tests/: __init__.py
tests/cli/: __init__.py  test_config_command.py  test_download_command.py  test_main.py  test_validation.py
tests/e2e/: README.md  __init__.py  conftest.py  test_cli_integration.py  test_full_download_workflow.py  test_performance_scenarios.py
tests/e2e_live/: __init__.py  conftest.py  test_cli_live.py  test_context7_live.py  test_full_workflow_live.py  test_proxy_live.py
tests/integration/: test_component_integration.py  test_config_integration.py  test_config_proxy_integration.py  test_context7_integration.py  test_deduplication_integration.py  test_rag_system_end_to_end.py  test_runner_rag_integration.py
tests/performance/: test_context7_performance.py
tests/unit/: test_concurrent_processor.py  test_configuration_manager.py  test_context7_api_fixes.py  test_context7_client.py  test_context_generator.py  test_deduplication_engine.py  test_dns_resolution.py  test_download_models.py  test_proxy_basic.py  test_proxy_manager.py  test_storage_manager.py
tests/vector/: __init__.py  test_embedding_engine.py  test_integration.py  test_qdrant_vector_store.py  test_vector_search_engine.py
(+37 files in other folders)
